hphp/test/slow/keyset/init-parse-error2.php.expectf
Fatal error: An expression is expected here. in %s/test/slow/keyset/init-parse-error2.php on line 5
